security-groups.tf
# resource "aws_security_group" "wordpress_sg" {
#   name        = "wordpress-sg"
#   description = "Allow SHH & HTTP traffic from the vpc components to the instance"
#   vpc_id      = aws_vpc.wordpress_vpc.id

#   dynamic "ingress" {
#     for_each = var.ec2_sg_ingress_ports
#     iterator = port
#     content {
#       from_port   = port.value
#       to_port     = port.value
#       protocol    = "tcp"
#       cidr_blocks = ["10.0.0.0/24"]
#     }
#   }

#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
#   }
# }

# resource "aws_security_group" "bastion-sg" {
#   name        = "bastion-sg"
#   description = "Bastion instance security groups to open SSH"
#   vpc_id      = aws_vpc.wordpress_vpc.id

#   ingress {
#     from_port   = 22
#     to_port     = 22
#     protocol    = "tcp"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
#   }
# }

resource "aws_security_group" "lb_sg" {
  name        = "lb_sg"
  description = "Bastion instance security groups to open SSH"
  vpc_id      = aws_vpc.wordpress_vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "aurora_sg" {
  name        = "rds_aurora_sg"
  description = "Open MySQL port 3306 for EC2 instances"
  vpc_id      = aws_vpc.wordpress_vpc.id

  ingress {
    from_port       = var.db_port
    to_port         = var.db_port
    protocol        = "tcp"
    security_groups = [aws_security_group.cuple-ae-wordpres-service_security_group.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "efs_sg" {
  name        = "efs_sg"
  description = "Opening EFS mount target port"
  vpc_id      = aws_vpc.wordpress_vpc.id

  ingress {
    from_port       = 2049
    to_port         = 2049
    protocol        = "tcp"
    security_groups = [aws_security_group.cuple-ae-wordpres-service_security_group.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}


resource "aws_security_group" "memcached_sg" {
  name        = "memcached_sg"
  description = "Opening memcached port for wordpress autoscaling group security group"
  vpc_id      = aws_vpc.wordpress_vpc.id

  ingress {
    from_port       = var.ec_memcached_port
    to_port         = var.ec_memcached_port
    protocol        = "tcp"
    security_groups = [aws_security_group.cuple-ae-wordpres-service_security_group.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
